--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "kaushal",
   "license": "ISC",
   "dependencies": {
-    "@middlewarelabs-devs/mw-node-apm": "^2.0.9",
+    "@middleware.io/node-apm": "^1.0.1",
     "express": "^4.18.1"
   }
 }
