--- a/nodejs_demo/package.json
+++ b/nodejs_demo/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4320 MW_API_KEY=218xbcpgpi1g11vy1umlnalhzr1lka1unjhj node index.js"
+    "start": "node index.js"
   },
   "author": "kaushal",
   "license": "ISC",
   "dependencies": {
-    "@middleware.io/node-apm": "^1.0.1",
+    "@middleware.io/node-apm": "^1.1.0",
     "express": "^4.18.1"
   }
 }
